--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/marketing",
+  "homepage": "https://gitname.github.io/",
   "name": "vite-project",
   "private": true,
   "version": "0.0.0",
