--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "generate-pwa-assets": "pwa-assets-generator --preset minimal public/logo.svg"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "formik": "^2.4.6",
     "framer-motion": "^11.11.7",
     "react": "^18.3.1",
